--- a/srv02.csproj
+++ b/srv02.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+iProject Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp6</TargetFramework>
+    <TargetFramework>netcoreapp9</TargetFramework>
 		<StartupObject>Program</StartupObject>
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
   </PropertyGroup>
