--- a/srv02.csproj
+++ b/srv02.csproj
@@ -2,7 +2,7 @@ iProject Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp9</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
 		<StartupObject>Program</StartupObject>
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
   </PropertyGroup>
